# wasp

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.kernel  Makefile.old  Makefile.tests  build-tests.sh  req  test.ld  test.sh
core/: CMakeLists.txt  machine.cpp  platform.cpp  runner.cpp
core/c_wrapper/: machine.cpp  opaque_types.h
core/loader/: elf_loader.cpp  flatbin_loader.cpp
core_wrapper/: CMakeLists.txt  loader.cpp  machine.cpp  opaque_types.h
data/: boottime.csv  boottime_hyperv.csv  hyperv-freshtime-release.csv  hyperv-release.csv
demos/: CMakeLists.txt  hyperv_demo.cpp
demos/boottime/: CMakeLists.txt  main.cpp  workload.cpp  workload.h
demos/double/: CMakeLists.txt  main.cpp  workload.cpp  workload.h
demos/double_c/: CMakeLists.txt  main.c  runner.c  runner.h  workload.c  workload.h
demos/fib/: main.cpp  workload.cpp  workload.h
demos/freshtime/: CMakeLists.txt  main.cpp  workload.cpp
demos/http_echo/: CMakeLists.txt  main.cpp  tcp_workload.cpp  tcp_workload.h
demos/hyperv/: CMakeLists.txt  hyperv_demo.cpp
demos/test/: CMakeLists.txt  main.cpp  workload.cpp
include/: compiler_defs.h  timeit.h
include/mobo/: backend.h  getopt.h  kvm.h  loader.h  machine.h  pci.h  range_map.h  runner.hpp  unistd.h  vcpu.h  workload.h  workload_impl.h
include/platform/: backend.h  getopt.h  loader.h  memory.h  platform.h  socket.h  support.h  unistd.h
include/platform/linux/: kvm.h  kvm_driver.h  socket.h
include/platform/windows/: getopt.h  hyperv.h  hyperv_driver.h  hyperv_machine.h  hyperv_vcpu.h  socket.h
include/wasp/: acpi.h  backend.h  compiler_defs.h  getopt.h  loader.h  machine.h  memory.h  multiboot.h  pci.h  platform.h  runner.hpp  socket.h  types.h  unistd.h  vcpu.h  vcpu_regs.h  workload.h
include/wasp/platform/linux/: kvm.h  socket.h
include/wasp/platform/windows/: hyperv_machine.h  hyperv_vcpu.h  socket.h  unistd.h
include/wasp_c/: compiler_defs.h  loader.h  machine.h  panic.h  vcpu_regs.h  workload.h  workload_defs.h
kernel/: kernel.ld
kernel/src/: boot.asm  boot.c  hypervisor.asm  hypervisor.h  main.c  printf.c  printk.h
kernel/src/arch/x86/: boot.asm
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt  kvm.cpp  platform.cpp
platform/windows/: CMakeLists.txt  getopt.c  hyperv_machine.cpp  hyperv_vcpu.cpp  platform.cpp  socket.cpp
serverless/fib/: .dockerignore  Cargo.toml  build.Dockerfile  build.sh  report.sh  sample_output.txt  scratch.txt
serverless/fib-dataflow/: Cargo.toml  build.sh  report.sh
serverless/fib-dataflow/data/: output.json
serverless/fib-dataflow/src/: dataflow.rs  main.rs
serverless/fib/data/: aws_fib_per_node.csv
serverless/fib/src/: main.rs
src/: CMakeLists.txt  context.cpp  kvm.cpp  machine.cpp  main.cpp  platform.cpp  vcpu.cpp
src/loader/: elf_loader.cpp  flatbin_loader.cpp
src/platform/: CMakeLists.txt
src/platform/linux/: kvm.cpp  kvm_driver.cpp  platform.cpp
src/platform/windows/: getopt.c  hyperv.cpp  hyperv_driver.cpp  hyperv_machine.cpp  hyperv_vcpu.cpp  platform.cpp  socket.cpp
src/workload/: boottime_workload.cpp  double_workload.cpp  fib_workload.cpp  tcp_workload.cpp
tests/boottime/: Makefile  boottime.asm
tests/counter/: Makefile  counter.asm
tests/double/: Makefile  double.asm
tests/double64/: Makefile  double64.asm
tests/fib20/: Makefile  fib20.asm
tests/freshtime/: Makefile  freshtime.asm
tools/: create_test.sh
virtine/: Cargo.toml
virtine/src/: bootstrap.asm  main.rs
wasp/: CMakeLists.txt  machine.cpp  vcpu.cpp
wasp-rs/: Cargo.toml  build.rs  wrapper.h
wasp-rs/data/df/: nested_native_0.csv  nested_native_10.csv  nested_native_15.csv  nested_native_5.csv  nested_vm_0.csv  nested_vm_10.csv  nested_vm_15.csv  nested_vm_5.csv
wasp-rs/src/: dataflow.rs  machine.rs  main.rs
wasp-rs/wasp-proc-macros/: Cargo.toml
wasp-rs/wasp-proc-macros/src/: boot32.asm  compile_cprog.sh  lib.rs
wasp-sys/: Cargo.toml  build.rs  wrapper.h
wasp/c_wrapper/: loader.cpp  machine.cpp
wasp/loader/: elf_loader.cpp
wasp/platform/linux/: CMakeLists.txt  kvm.cpp  platform.cpp
wasp/platform/windows/: CMakeLists.txt  getopt.c  hyperv_machine.cpp  platform.cpp
