# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wasp"
version = "0.1.0"
authors = [
    "Josh Bowden <josbow@gmail.com>",
    "Nick Wanninger <nickwanninger@gmail.com>"
]
edition = "2018"


[dependencies]
wasp-proc-macros = { path = "./wasp-proc-macros" }
proc-macro-hack = "0.5"
capstone = "0.7.0"
workerpool = "1.2.0"
pretty-hex = "0.1.1"
tokio = { version = "0.2.21", features = ["rt-threaded", "macros", "sync"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
num_cpus = "0.2"
core_affinity = "0.5.10"
threadpool = "1.8.1"
bincode = "1.2.1"

# test deps
rocket = "0.4.4"

[build-dependencies]
bindgen = "0.53.2"
cfg-if = "0.1"
