[package]
name = "fib_serverless"
version = "0.1.0"
authors = ["Josh Bowden <josbow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }

lambda_http = "0.1.1"
lambda_runtime = "0.2.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

simple_logger = "1.6.0"
