[package]
name = "wasp-proc-macros"
version = "0.1.0"
authors = ["Nick Wanninger <nickwanninger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro-hack = "0.5"
rand = "0.7.3"

[lib]
proc-macro = true
